--- a/style.css
+++ b/style.css
@@ -37,13 +37,8 @@ body {
   padding-right: 5%;
 }
 .half-width {
-  width: 50%;
   padding: 2%;
-  margin-top: 5%;
-  margin-left: 5%;
-  margin-right: 5%;
-  height: 200px;
-  width: 500px;
+  margin: 5%;
 }
 .half-width img {
   height: 414px;
@@ -69,6 +64,7 @@ body {
 }
 .half-width-bg {
   background: url(./images/Circle\ design.svg);
+  background-repeat: no-repeat;
 }
 /* Banner End */
 /* Logo Items Start */
@@ -77,5 +73,8 @@ body {
   align-items: center;
   justify-content: center;
   margin-top: 100px;
+}
+.logo-items a {
+  padding: 1em;
 }
 /* Logo Items End */
